assets/scss/zerotohero.scss
/* ... */
.zerotohero-zoom-6 {
  .use-zoom {
    font-size: calc(1em * 1.25 * 1.25 * 1.25 * 1.25 * 1.25 * 1.25);
  }
}
.zerotohero-zoom-7 {
  .use-zoom {
    font-size: calc(1em * 1.25 * 1.25 * 1.25 * 1.25 * 1.25 * 1.25 * 1.25);
  }
}

.text-primary {
  color: $primary-color !important;
}

.zerotohero-dark {
  .text-contrast {
    color: $text-color-on-dark;
  }
}

.zerotohero-light {
  .text-contrast {
    color: $text-color-on-light;
  }
}

.bg-primary,
a.bg-primary:hover,
button.bg-primary:hover,
a.bg-primary:focus,
button.bg-primary:focus {
  background-color: $primary-color !important;
}

.border-dashed {
  border-style: dashed !important;
  border-width: 2px !important;
}

.border-primary {
  border-color: $primary-color !important;
}

.bg-gray {
  background-color: #efefef !important;
}

.border-gray {
  border-color: #efefef !important;
}

.btn-xs {
  font-size: 0.8rem;
  padding: 0.1rem 0.4rem;
}

.btn-small {
  font-size: 0.8rem;
  padding: 0.1rem 0.4rem;
  border-radius: 0.2rem;
  position: relative;
  display: inline-block;
  border: none;
}

.btn-small:hover {
  text-decoration: none;
}

.btn-small img {
  height: 0.9rem;
  margin-bottom: 0.2rem;
  filter: opacity(0.3);
}

.form-control-small {
  font-size: 0.8rem;
  padding: 0 0.4rem;
  height: 1.4rem;
}

.btn-primary {
  background-color: $primary-color;
  border-color: $primary-color;
  color: white;
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:not(:disabled):not(.disabled):active {
  background-color: $primary-color-dark;
  border-color: $primary-color-dark;
  color: white;
}

.btn-gray {
  background: #efefef;
  color: #8e8e8e;
}

.btn-gray:hover,
.btn-gray:focus .btn-gray:not(:disabled):not(.disabled):active {
  text-decoration: none;
  background: #d8d8d8;
  color: #8e8e8e;
}

.btn-ghost-dark-outline {
  color: hsla(0deg 0% 100% / 50%);
  border: 2px solid #666;
  background: none;
  &:hover {
    background-color: hsla(0deg 0% 100% / 70%);
    border: 2px solid #aaa;
  }
}

.btn-ghost-dark,
.select-ghost-dark {
  background-color: hsla(0deg 0% 100% / 42%);
  border: none;
  color: black;
  &:hover,
  &:active {
    background-color: hsla(0deg 0% 100% / 70%);
    color: black;
  }
}

.select-ghost-dark {
  height: 40px;
}

.btn-ghost-dark-no-bg {
  background: none;
  color: white;
  border: none;
  &:hover,
  &:active {
    color: white;
    background-color: hsla(0deg 0% 100% / 15%);
  }
}

.btn-medium {
  display: inline-block;
  border: none;
  padding: 0.2rem 0.5rem;
  border-radius: 0.3rem;
}

.input-ghost-dark {
  background: $bg-color-dark-1;
  border-radius: 0.25rem;
  border: 1px solid #cccccc44;
  color: rgba(255, 255, 255, 0.75);
  height: 40px;
  box-shadow: 0px 5px 14px 3px rgb(119 119 119 / 42%);
  &::placeholder {
    color: rgba(255, 255, 255, 0.392);
  }
}

.article {
  list-style: none;
  margin-bottom: 1rem;
  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
  border-radius: 0.3rem;
  overflow: hidden;

  .article-title {
    padding-bottom: 0.5rem;
    margin-bottom: 1rem;
    color: $primary-color;
  }

  &.skin-light {
    .article-title {
      border-bottom: 1px solid $bg-color-light-4;
    }
  }

  &.skin-dark {
    .article-title {
      border-bottom: 1px solid $bg-color-dark-4;
    }
  }
}

.article-list-item .article-body {
  font-size: 1rem;
}

.article-list-item.collapsed .article-body {
  max-height: 10rem;
  overflow: hidden;
  -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
  mask-image: linear-gradient(180deg, #000 60%, transparent);
}

.article-list-item a {
  color: inherit;
}

.article-list-item a:hover {
  color: inherit;
  text-decoration: none;
}

.article-body img {
  display: none;
}

.btn-default {
  background: #cecece;
  color: white;
}

.btn-default:hover {
  background: $primary-color;
  color: white;
}

.btn-dark {
  color: #ddd;
}

.list-group-item.active {
  background-color: $primary-color;
  border-color: $primary-color;
}

.list-group-item.active:hover {
  color: white;
}

.foreground {
  z-index: 2;
  position: relative;
}

.img-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.coupon-code {
  background-color: white;
  font-size: 1.2em;
  color: $primary-color;
  padding: 0.2rem 0.5rem;
  border-radius: 0.2rem;
}

.word-square {
  padding: 4px;
  font-size: 10px;
  width: 30px;
  height: 30px;
  overflow: hidden;
  line-height: 10px;
  text-align: center;
  display: flex;
  float: left;
  justify-content: center;
  align-items: center;
  border: 1px solid white;
  font-weight: bold;
}

.tabs {
  white-space: nowrap;
  overflow: scroll;
  overflow-y: hidden;
  a svg,
  a i {
    margin-right: 0.5rem;
  }
}

.tab {
  padding: 0.5rem 1rem;
  border-radius: 0.3rem 0.3rem 0 0;
  display: inline-block;
  margin-right: 0.2rem;
  border: none;
}

.zerotohero-wide {
  .content-panes {
    display: flex;
    flex-wrap: nowrap;
    .content-pane-left {
      width: 21rem;
      height: 100vh;
      position: sticky;
      top: 2.5rem;
    }
    .content-pane-right {
      padding: 0 1rem;
      width: 100%;
      overflow: hidden;
    }
  }
}

.play-button-wrapper {
  .play-button {
    background: rgba(0, 0, 0, 0.3);
    color: rgba(255, 255, 255, 0.384);
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    position: absolute;
    top: calc(50% - 20px);
    left: calc(50% - 20px);
    border-radius: 100%;
    width: 40px;
    height: 40px;
    transform: scale(1.5);
    z-index: 1;
    opacity: 0;
  }
  .play-button {
    color: rgba(255, 255, 255, 0.616);
    transform: scale(1.8);
    transition: 200ms ease-in-out;
    opacity: 1;
  }
}

.home-card {
  padding: 2rem;
  border-radius: 1rem;
  box-shadow: 0 10px 30px rgba(68, 75, 134, 0.2);
  height: 100%;
  :deep(.language-list) .language-list-item a {
    color: #000000cc !important;
  }
  color: #444;
  background-color: white;
  border: 1px solid rgba(255, 255, 255, 0.9);
}
/* ... */

